GtkThemes: fixes for backdrop text and headerbar switches
- default theme: improved the headerbar switch slider border to not overlap too much
- default+light themes: lighten up the backdrop text color to have a similar color to backdrop fg color

--- a/gtk/src/default/gtk-3.20/_headerbar.scss
+++ b/gtk/src/default/gtk-3.20/_headerbar.scss
@@ -244,6 +244,9 @@ headerbar,
   // Re-style sliders for switches and scales do make them look sharp on the dark headerbar
   switch, scale {
     slider {
+      &:checked {
+        border-color: $checkradio_borders_color;
+      }
       &:backdrop {
         @include button(backdrop-alt, $_button_bg_color);
 
